fix: pinned item overflow text

--- a/app/blog/theme.css
+++ b/app/blog/theme.css
@@ -891,7 +891,7 @@ button.blog-primary-button:disabled {
   letter-spacing: -0.05em;
   display: -webkit-box;
   overflow: hidden;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
